[gd_scene load_steps=12 format=4 uid="uid://d2yqgj7a0ss43"]

[ext_resource type="Script" uid="uid://doeogaww1xbow" path="res://inferiority_boss.gd" id="1_2u8in"]
[ext_resource type="Texture2D" uid="uid://p2wc8b8r4spb" path="res://sky.jpg" id="1_7tjd0"]
[ext_resource type="PackedScene" uid="uid://qbo8n4j5y76b" path="res://inferiority_boss.tscn" id="1_cw63b"]
[ext_resource type="Texture2D" uid="uid://cjqbecsbxaw28" path="res://oak_woods_tileset.png" id="1_mcga0"]
[ext_resource type="PackedScene" uid="uid://ba5hvp3dt4bvk" path="res://player.tscn" id="3_86imt"]
[ext_resource type="Script" uid="uid://ddoefnlbl8kc7" path="res://teardrops.gd" id="5_mhw36"]
[ext_resource type="Texture2D" uid="uid://dkhbbhrn8wb8i" path="res://assets/textures/teardrop.png" id="5_tefjk"]
[ext_resource type="Texture2D" uid="uid://bore77puv66cv" path="res://assets/textures/heart.png" id="8_vx5mm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cw63b"]
texture = ExtResource("1_mcga0")
texture_region_size = Vector2i(9, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
15:0/0 = 0
16:0/0 = 0
18:0/0 = 0
19:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
18:1/0 = 0
19:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
25:2/0 = 0
26:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
0:3/0 = 0
1:3/0 = 0
4:3/0 = 0
5:3/0 = 0
9:3/0 = 0
10:3/0 = 0
15:3/0 = 0
16:3/0 = 0
21:3/0 = 0
22:3/0 = 0
25:3/0 = 0
26:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
10:5/0 = 0
11:5/0 = 0
13:5/0 = 0
14:5/0 = 0
16:5/0 = 0
17:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
9:6/0 = 0
10:6/0 = 0
15:6/0 = 0
16:6/0 = 0
2:7/0 = 0
3:7/0 = 0
9:7/0 = 0
10:7/0 = 0
15:7/0 = 0
16:7/0 = 0
22:7/0 = 0
23:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
9:8/0 = 0
10:8/0 = 0
22:8/0 = 0
23:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
0:9/0 = 0
1:9/0 = 0
4:9/0 = 0
5:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
22:9/0 = 0
23:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
22:10/0 = 0
23:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
18:12/0 = 0
19:12/0 = 0
24:12/0 = 0
25:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
0:13/0 = 0
1:13/0 = 0
4:13/0 = 0
5:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
18:13/0 = 0
19:13/0 = 0
24:13/0 = 0
25:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
22:15/0 = 0
23:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
22:16/0 = 0
23:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
0:17/0 = 0
1:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
22:17/0 = 0
23:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
27:18/0 = 0
28:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
30:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
30:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
30:21/0 = 0
20:12/size_in_atlas = Vector2i(4, 2)
20:12/0 = 0
32:24/size_in_atlas = Vector2i(5, 3)
32:24/0 = 0
32:24/0/physics_layer_0/polygon_0/points = PackedVector2Array(-22.755135, -12.33952, 2.18927, -12.074154, 22.622452, -12.074154, 22.357086, -0.3980484, 22.622452, 11.808788, 7.363907, 11.6761055, -22.7522, 11.942333)
9:33/0 = 0
0:30/size_in_atlas = Vector2i(9, 3)
0:30/0 = 0

[sub_resource type="TileSet" id="TileSet_86imt"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_cw63b")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7tjd0"]
size = Vector2(9, 226)

[node name="inferiorityBossGame" type="Node2D"]
script = ExtResource("1_2u8in")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Parallax2D" type="Parallax2D" parent="."]
autoscroll = Vector2(10, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
position = Vector2(273, -117)
scale = Vector2(0.288, 0.315)
texture = ExtResource("1_7tjd0")

[node name="CanvasModulate" type="CanvasModulate" parent="Parallax2D"]
color = Color(0.4999556, 0.51068676, 0.31420207, 1)

[node name="guilt boss" parent="." instance=ExtResource("1_cw63b")]
z_index = 1
position = Vector2(96, -94)
script = null

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, -1)
tile_map_data = PackedByteArray("AAABAAAAAAAgABgAAAADAAAAAAAgABgAAAAFAAAAAAAgABgAAAAHAAAAAAAgABgAAAAJAAAAAAAgABgAAAALAAAAAAAgABgAAAANAAAAAAAgABgAAAAPAAAAAAAgABgAAAARAAAAAAAgABgAAAATAAAAAAAgABgAAAAKAP//AAAAAB4AAAAPAP//AAAAAB4AAAAFAP//AAAAAB4AAAACAP//AAAAAB4AAAASAP//AAAAAB4AAAAHAP7/AAAAAB4AAAAMAP7/AAAAAB4AAAAPAP7/AAAAAB4AAAAFAP7/AAAAAB4AAAAHAP3/AAAAAB4AAAALAP3/AAAAAB4AAAANAP3/AAAAAB4AAAAMAPz/AAAAAB4AAAAIAPz/AAAAAB4AAAAIAPv/AAAAAB4AAAAMAPv/AAAAAB4AAAAIAPr/AAAAAB4AAAAMAPr/AAAAAB4AAAAIAPn/AAAAAB4AAAAMAPn/AAAAAB4AAAAJAPj/AAAAAB4AAAALAPj/AAAAAB4AAAAOAP3/AAAAAB4AAAAGAP3/AAAAAB4AAAANAPz/AAAAAB4AAAAHAPz/AAAAAB4AAAANAPv/AAAAAB4AAAAHAPv/AAAAAB4AAAAWAAAAAAAgABgAAAAVAAAAAAAgABgAAAAZAAAAAAAgABgAAAAYAAAAAAAgABgAAAAaAAAAAAAgABgAAAAbAAAAAAAgABgAAAAcAAAAAAAgABgAAAAdAAAAAAAgABgAAAA=")
tile_set = SubResource("TileSet_86imt")

[node name="player" parent="." instance=ExtResource("3_86imt")]
position = Vector2(3, -8)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-5.5, -103)
shape = SubResource("RectangleShape2D_7tjd0")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(419, -105)
shape = SubResource("RectangleShape2D_7tjd0")

[node name="teardrops" type="Area2D" parent="."]
position = Vector2(46, -500)
script = ExtResource("5_mhw36")

[node name="Sprite2D" type="Sprite2D" parent="teardrops"]
position = Vector2(-4.2750015, -9.059999)
scale = Vector2(0.068450175, 0.047233272)
texture = ExtResource("5_tefjk")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="teardrops"]
position = Vector2(-4.347223, -8.500016)
scale = Vector2(0.6944443, 0.6398815)
polygon = PackedVector2Array(-1, -21, -12, 5, -13, 8, -12, 15, -5, 21, 3, 21, 10, 19, 13, 13, 14, 7, 7, -6, 1, -19)

[node name="speed" type="Timer" parent="teardrops"]
wait_time = 0.05
autostart = true

[node name="lifetime" type="Timer" parent="teardrops"]
wait_time = 5.0
one_shot = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="heart1" type="TextureRect" parent="Control/CanvasLayer"]
offset_left = 5.9999995
offset_top = 5.9999995
offset_right = 343.0
offset_bottom = 343.0
scale = Vector2(0.075, 0.075)
texture = ExtResource("8_vx5mm")

[node name="heart2" type="TextureRect" parent="Control/CanvasLayer"]
offset_left = 33.0
offset_top = 6.0
offset_right = 370.0
offset_bottom = 343.0
scale = Vector2(0.075, 0.075)
texture = ExtResource("8_vx5mm")

[node name="heart3" type="TextureRect" parent="Control/CanvasLayer"]
offset_left = 60.0
offset_top = 6.0
offset_right = 397.0
offset_bottom = 343.0
scale = Vector2(0.075, 0.075)
texture = ExtResource("8_vx5mm")

[connection signal="body_entered" from="teardrops" to="." method="_on_teardrops_body_entered"]
